[package]
name = "labs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.36.2", default-features = false, features = ["parquet", "fmt", "lazy"] }
tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "sync", "macros", "time"] }
