[package]
name = "labs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.36.2", default-features = false, features = ["parquet", "fmt", "lazy"] }
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "sync", "macros", "time"] }
